# xiaozhi-esp32

./: .gitignore  CMakeLists.txt  MAIN_CC_INTEGRATION.md  enhanced_upy_test.py  test_all_functions.py  test_board_module.py  test_full_integration_with_rgb.py  test_main_integration.py  test_micropython_direct.py  test_rgb_led_simple.py  upy_test.py
.devcontainer/: Dockerfile  devcontainer.json
components/lua/: CMakeLists.txt
components/tusb_console/main/: tusb_console_main.c
examples/uart_repl_eps32s3/main/: uart_repl_example_main.c
main/: CMakeLists.txt  application.cc  application_c.h  assets.h  idf_component.yml  lua_repl.c  main.c  main_c_wrapper.c  modmain.c  system_info_c.c  system_info_c.cpp  system_info_c.h
main/assets/: cJSON.h
main/boards/common/: board.h  http.h  network_interface.h  web_socket.h
main/display/: display.h  esp_timer.h  font_awesome.h  oled_display.h
main/display/lvgl_display/: lvgl.h  lvgl_display.h  lvgl_font.h  lvgl_image.h  lvgl_theme.h
micropython/: CMakeLists.native.txt  CMakeLists.txt  DEVELOPMENT_PLAN.md  FreeRTOSConfig.h  README.md  audio.py  audio_debug.py  build_modspotpear.sh  deploy.sh  main.py  simulate_python_tests.py  sp_esp32_s3_1_28_box_wrapper.cpp  test_board.py  test_board_wrapper.py  test_psram_simple.py  verify.sh
micropython/components/board_wrapper/: CMakeLists.txt
micropython/components/micropython_mod/: CMakeLists.txt  modspotpear.c  python_tests.c  python_tests.h
micropython/main/: CMakeLists.txt  main.c
micropython/micropython_src/usercmodules/modspotpear/: CMakeLists.txt  modspotpear.c
(+35 files in other folders)
